--- a/m4/demo1/1.3/Jenkinsfile
+++ b/m4/demo1/1.3/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         stage('Build') {                 
             steps {
                 script {
-                    image = docker.build("sixeyed/pi:psod-pipelines", "--pull -f m4/Dockerfile m4")
+                    image = docker.build("alysonfranklin/dotnet:0.0.1", "--pull -f m4/Dockerfile m4")
                 }                
             }
         }   
